prevent overflow of Cover image when used on monitor with crazy width:hight ratio's

--- a/src/app/styl/movie_detail.styl
+++ b/src/app/styl/movie_detail.styl
@@ -79,6 +79,7 @@
     position relative
     width 20%
     border-radius 4px
+    max-height 70%
     float left
     margin-right 20px
     margin-left 66px
